fixed dark mode when website resizes

--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 body {
   height: 100%;
+  width: fit-content;
   margin: 0;
   padding: 0;
   font-family: "Anonymous Pro", monospace;
   line-height: 1.5em;
   font-size: 100%;
-  background-color: white;
 }
 
 .dark-mode {
   filter: invert(100%);
+  background-color: black;
 }
 
 .dark_btn{
